# data_catalog_view

./: .replit  insights_data.json  insights_relationships.csv  jstocsv.py  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  fullstack-caching.md
DC-SET-DATA/: cataloger.py  poc_cataloger.py  requirements.txt  set_insights.py  tagger_script.py  tmp_remove_tasks_aspect_from_tables.py
PROD_GITLAB/data-catalog-api/: .dockerignore  Dockerfile  cache_utils.py  main.py
PROD_GITLAB/data-catalog-api/services/: translation_service.py
PROD_GITLAB/data-catalog-app/: Dockerfile  docker-entrypoint.sh  nginx.conf.template  package.json  pnpm-workspace.yaml
PROD_GITLAB/data-catalog-app/app/: index.html  tsconfig.json  vite.config.ts
PROD_GITLAB/data-catalog-mng/: dataplex_info_monday.py  sync_descriptions.py
_deployment/: SPLIT.md  setup-repos.sh
artifacts/api-server/: package.json
artifacts/api-server-OLD/: package.json
artifacts/data-catalog/: .tsbuildinfo  package.json  vite.config.ts
artifacts/data-catalog-api/: main.py  models.py  requirements.txt  tmp.py
artifacts/data-catalog-api/.replit-artifact/: artifact.edit.toml
artifacts/data-catalog-api/services/: bigquery_service.py  dataplex_service.py
attached_assets/: Pasted-Role-Expert-Full-Stack-Architect-React-Python-FastAPI-C_1782628644246.txt
disposable/: inspect_scan.py  run_scans.py  setup_dataplex.py  test_profile.py  update_publish_gcloud.sh
lib/api-client-react/: tsconfig.tsbuildinfo
lib/api-spec/: openapi.yaml
lib/api-zod/: tsconfig.tsbuildinfo
(+62 files in other folders)
