[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "google-cloud-bigquery==3.25.0",
    "google-cloud-dataplex==2.5.0",
    "google-cloud-translate==3.15.3",
    "pydantic==2.8.2",
    "uvicorn[standard]==0.30.6",
]
